--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     }
   },
   "scripts": {
-    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} src/**/*.ts",
+    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} src/**/*.ts test/**/*.ts",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "npm run lint -- --fix",
-    "prebuild": "npm run format && npm run lint:fix && rm -fr ./dist",
+    "test": "vitest run",
+    "prebuild": "npm run format && npm run lint:fix && npm test && rm -fr ./dist",
     "build": "tsc --project ./tsconfig.json",
     "build:watch": "tsc --project ./tsconfig.json --watch",
     "prepack": "npm run build"
@@ -54,6 +55,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.1"
   }
 }
