--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} src/**/*.ts test/**/*.ts",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "npm run lint -- --fix",
+    "lint:test": "eslint test/**/*.{js,ts}",
+    "lint:test:fix": "npm run lint:test -- --fix",
     "test": "vitest run",
     "prebuild": "npm run format && npm run lint:fix && npm test && rm -fr ./dist",
     "build": "tsc -p tsconfig.app.json",
