--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^2.1.1"
   }
 }
