--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     }
   },
   "scripts": {
-    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} src/**/*.ts test/**/*.ts",
-    "lint": "eslint src/**/*.{js,ts}",
+    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} {src,test*}/**/*.ts",
+    "lint": "eslint {src,test*}/**/*.{js,ts}",
     "lint:fix": "npm run lint -- --fix",
-    "lint:test": "eslint test*/**/*.{js,ts}",
-    "lint:test:fix": "npm run lint:test -- --fix",
     "test": "vitest run",
-    "prebuild": "npm run format && npm run lint:fix && npm test && rm -fr ./dist",
-    "build": "tsc -p tsconfig.app.json",
-    "build:watch": "tsc -p tsconfig.app.json --watch",
+    "prebuild": "npm run format && npm run lint:fix && npm test && rimraf ./dist",
+    "tsc": "tsc -p tsconfig.app.json",
+    "tsc-alias": "tsc-alias -p tsconfig.app.json",
+    "build": "npm run tsc && npm run tsc-alias",
     "prepack": "npm run build"
   },
   "files": [
@@ -53,6 +52,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^2.1.1"
