--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
-      "import": "./dist/index.js",
-      "default": "./dist/index.js"
+      "import": "./dist/app/index.js",
+      "default": "./dist/app/index.js"
     }
   },
   "scripts": {
