--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "declaration": true,
-    "outDir": "./dist",
+    "outDir": "./dist/app",
     "declarationDir": "./dist/types",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
