--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tsc": "tsc -p tsconfig.app.json",
     "tsc-alias": "tsc-alias -p tsconfig.app.json",
     "build": "npm run tsc && npm run tsc-alias",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "prepare": "husky"
   },
   "files": [
     "dist"
@@ -39,11 +40,14 @@
     "url": "https://github.com/LexBorisoff/fs-hooks/issues"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@lexjs/eslint-plugin": "^1.0.0",
     "@types/node": "^22.3.0",
     "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
+    "husky": "^9.1.7",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
