test: added tests for core file and directory hooks

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "paths": {
       "@app-types/*": ["./src/types/*"],
+      "@core-hooks/*": ["./src/core-hooks/*"],
       "@errors/*": ["./src/errors/*"],
       "@utils/*": ["./src/utils/*"]
     }
