build: updated package scripts

--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     }
   },
   "scripts": {
-    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} {src,test*}/**/*.ts",
-    "lint": "eslint {src,test*}/**/*.{js,ts}",
-    "lint:fix": "npm run lint -- --fix",
+    "prepack": "npm run build",
+    "build": "npm run compile && npm run import-alias",
+    "prebuild": "npm run ci && rimraf ./dist",
+    "ci": "npm run check-style && npm run check-build && npm run test",
     "test": "vitest run",
     "test:cov": "vitest run --coverage",
-    "prebuild": "npm run format && npm run lint:fix && npm test && rimraf ./dist",
-    "tsc": "tsc -p tsconfig.app.json",
-    "tsc-alias": "tsc-alias -p tsconfig.app.json",
-    "build": "npm run tsc && npm run tsc-alias",
-    "prepack": "npm run build",
+    "check-style": "npm run format:check && npm run lint",
+    "check-build": "npm run compile -- --noEmit",
+    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
+    "format:check": "prettier --check *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
+    "lint": "eslint {src,test}/**/*.{js,ts}",
+    "lint:fix": "npm run lint -- --fix",
+    "style": "npm run format && npm run lint:fix",
+    "compile": "tsc -p tsconfig.app.json",
+    "import-alias": "tsc-alias -p tsconfig.app.json",
     "prepare": "husky"
   },
   "files": [
