--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fs-hooks",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.0-semantically-released",
+  "description": "Library for working with the file system in Node.js",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
@@ -60,6 +60,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "semantic-release": "^24.2.1",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.15.0",
