ci: added clean-install step in code-coverage job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
           node-version: latest
           cache: npm
 
+      - run: npm clean-install
       - run: npm run test:cov
 
       - name: Upload coverage reports to Codecov
