--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@lexjs/eslint-plugin": "^1.1.1",
     "@types/node": "^22.3.0",
     "@vitest/coverage-v8": "^2.1.4",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "husky": "^9.1.7",
