--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   },
   "scripts": {
     "prepack": "npm run build",
-    "build": "npm run compile && npm run import-alias",
     "prebuild": "npm run ci && rimraf ./dist",
-    "ci": "npm run check-style && npm run check-build && npm run test",
+    "build": "npm run compile && npm run import-alias",
+    "ci": "npm run check:style && npm run check:build && npm run test",
     "test": "vitest run",
     "test:cov": "vitest run --coverage",
-    "check-style": "npm run format:check && npm run lint",
-    "check-build": "npm run compile -- --noEmit",
-    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
-    "format:check": "prettier --check *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
-    "lint": "eslint {src,test}/**/*.{js,ts}",
-    "lint:fix": "npm run lint -- --fix",
-    "style": "npm run format && npm run lint:fix",
     "compile": "tsc -p tsconfig.app.json",
     "import-alias": "tsc-alias -p tsconfig.app.json",
+    "check:style": "npm run check:format && npm run check:lint",
+    "check:build": "npm run compile -- --noEmit",
+    "check:format": "prettier --check \"*.{js,cjs,mjs,ts,cts,mts}\" \"{src,test}/**/*.ts\"",
+    "check:lint": "eslint \"{src,test}/**/*.{js,ts}\"",
+    "style": "npm run format && npm run lint",
+    "format": "prettier --write \"*.{js,cjs,mjs,ts,cts,mts}\" \"{src,test}/**/*.ts\"",
+    "lint": "npm run check:lint -- --fix",
     "prepare": "husky"
   },
   "files": [
