--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   },
   "scripts": {
     "prepack": "npm run build",
-    "prebuild": "npm run ci && rimraf ./dist",
     "build": "npm run compile && npm run import-alias",
-    "ci": "npm run check:style && npm run check:build && npm run test",
+    "prebuild": "npm run ci && rimraf ./dist",
+    "ci": "npm run check-style && npm run check-build && npm run test",
     "test": "vitest run",
     "test:cov": "vitest run --coverage",
+    "check-style": "npm run format:check && npm run lint",
+    "check-build": "npm run compile -- --noEmit",
+    "format": "prettier --write *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
+    "format:check": "prettier --check *.{js,cjs,mjs,ts,cts,mts} {src,test}/**/*.ts",
+    "lint": "eslint {src,test}/**/*.{js,ts}",
+    "lint:fix": "npm run lint -- --fix",
+    "style": "npm run format && npm run lint:fix",
     "compile": "tsc -p tsconfig.app.json",
     "import-alias": "tsc-alias -p tsconfig.app.json",
-    "check:style": "npm run check:format && npm run check:lint",
-    "check:build": "npm run compile -- --noEmit",
-    "check:format": "prettier --check \"*.{js,cjs,mjs,ts,cts,mts}\" \"{src,test}/**/*.ts\"",
-    "check:lint": "eslint \"{src,test}/**/*.{js,ts}\"",
-    "style": "npm run format && npm run lint",
-    "format": "prettier --write \"*.{js,cjs,mjs,ts,cts,mts}\" \"{src,test}/**/*.ts\"",
-    "lint": "npm run check:lint -- --fix",
     "prepare": "husky"
   },
   "files": [
@@ -59,9 +59,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@lexjs/eslint-plugin": "^1.1.3",
-    "@types/node": "^22.17.0",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@lexjs/eslint-plugin": "^1.1.1",
+    "@types/node": "^22.3.0",
+    "@vitest/coverage-v8": "^2.1.4",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
@@ -70,9 +70,9 @@
     "rimraf": "^6.0.1",
     "semantic-release": "^24.2.1",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.9.2",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.15.0",
     "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^3.2.4"
+    "vitest": "^2.1.1"
   }
 }
